Added Test Link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </aside>
     <main>
       <p>Your weekly primer on utilities industry and BC Hydro news</p>
+      <a href="http://google.com">test link</a>
       <section>
         <h2>Headlines at a glance:</h2>
         <ul>
