--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
   <script src="extendPageToBottom.js"></script>
   <!--<script src="hamburgerMenu.js"></script>-->
-  <title>HydroBook/title>
+  <title>HydroBook</title>
 </head>
 <body>
   <header id="topBar">
